--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,32 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jgraph"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jfreechart"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JFreechart"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jung"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/jfreesvg-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/orsoncharts-1.4-eval-nofx.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/orsonpdf-1.6-eval.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/servlet.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19/lib/swtgraphics2d.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/collections-generic-4.01.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/colt-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/concurrent-1.3.4.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/j3d-core-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-3d-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-3d-demos-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-algorithms-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-graph-impl-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-io-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-jai-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-jai-samples-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-samples-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/jung-visualization-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/vecmath-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/Jung/wstx-asl-3.2.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
